<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/findAccToolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="#ededed"
        android:elevation="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/need_more_help"
        android:layout_below="@id/findAccToolBar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="35dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/find_your_account"
            android:textColor="@android:color/black"
            android:textSize="29sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/find_acc_info"
            android:textSize="15.5sp" />

        <EditText
            android:id="@+id/username_findAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/edtxt_round"
            android:hint="@string/username_findAcc_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="17dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.3"
            android:background="@drawable/btn_round"
            android:padding="16dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:gravity="center">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.6dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/or_findAcc"
                android:background="@color/language_picker"
                android:fadingEdge="horizontal" />

            <TextView
                android:id="@+id/or_findAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/or"
                android:textColor="@color/gray"
                android:textSize="13sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.6dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/or_findAcc"
                android:background="@color/language_picker"
                android:fadingEdge="horizontal" />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_fb"
            android:text="@string/log_in_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/fblogin"
            android:textSize="12sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/need_more_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/need_more_help"
        android:textColor="@color/fblogin"
        android:textSize="12sp" />
</RelativeLayout>