<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/loginPageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/loginPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="27dp"
            android:paddingEnd="27dp">

            <ImageView
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/edtxt_round"
                android:hint="@string/username_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/password_toggle_tint"
                app:passwordToggleTintMode="src_atop">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edtxt_round"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:alpha="0.3"
                android:background="@drawable/btn_round"
                android:padding="16dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgotpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/forgot_your_login_details"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/findAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/get_help_signing_in"
                    android:textColor="@color/signup"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:gravity="center">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.6dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/or"
                    android:background="@color/language_picker"
                    android:fadingEdge="horizontal" />

                <TextView
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/or"
                    android:textColor="@color/gray"
                    android:textSize="13sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.6dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/or"
                    android:background="@color/language_picker"
                    android:fadingEdge="horizontal" />
            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_fb"
                android:text="@string/log_in_with_facebook"
                android:textAllCaps="false"
                android:textColor="@color/fblogin"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signupPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginPage"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_marginBottom="2dp"
                android:background="@color/language_picker"
                android:fadingEdge="horizontal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/donthaveacc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/sign_up"
                    android:textColor="@color/signup"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>