<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/switchPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/dashPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="70dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:background="@drawable/btn_round"
            android:padding="17dp"
            android:text="@string/create_new_account"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/gotoLoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="30dp"
            android:background="@android:color/transparent"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/btn_login_blue"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>